--- a/application.yml
+++ b/application.yml
@@ -7,7 +7,8 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
-    datasource:
+spring:
+  datasource:
     url: jdbc:mysql://localhost:3306/microservices_db
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
